--- a/Extensions.html
+++ b/Extensions.html
@@ -5,8 +5,6 @@
   <body style="background-color: lightblue; color: white"><center>
     <h1>Mrcomputer1's Scratch Extensions</h1>
     Here is a list of extensions:<br>
-    <ul>
-      <li>Minecraft Extension - Can check minecraft server status</li>
-    </ul>
+    <a href="Mrcomputer1ScratchExtensions/MinecraftExtension.html">Minecraft Extension - Can check minecraft server status</a><br>
   </center></body>
 </html>
