--- a/Extensions.html
+++ b/Extensions.html
@@ -1,10 +1,19 @@
 <html>
   <head>
     <title>Mrcomputer1's Scratch Extensions</title>
+    <style>
+      .link{
+        color: blue;
+        text-decoration:none;
+      }
+      .link:hover{
+        text-decoration:underline;
+      }
+    </style>
   </head>
   <body style="background-color: lightblue; color: white"><center>
     <h1>Mrcomputer1's Scratch Extensions</h1>
     Here is a list of extensions:<br>
-    <a href="Mrcomputer1ScratchExtensions/MinecraftExtension.html">Minecraft Extension - Can check minecraft server status</a><br>
+    <a class="link" href="Mrcomputer1ScratchExtensions/MinecraftExtension.html">Minecraft Extension - Can check minecraft server status</a><br>
   </center></body>
 </html>
