--- a/ExtList.html
+++ b/ExtList.html
@@ -1,11 +1,24 @@
 <html>
   <head>
     <title>Mrcomputer1's Extension List</title>
+    <style>
+      a{
+        color: blue;
+        text-decoration: none;
+      }
+      a:hover{
+        color: blue;
+        text-decoration: underline;
+      }
+      body{
+        background-color: yellow;
+      }
+    </style>
   </head>
   <body>
     <center>
       <i>Some of the extensions have been got from other lists</i>
-      <table>
+      <table border="1">
         <thead>
           <tr>
             <td>Name</td> <td>Author</td> <td>Link [ScratchX]</td> <td>Link [Source]</td> <td>Link [Forum/Page]</td> <td>Link [Example Project]</td> <td>Info</td>
