--- a/ExtList.html
+++ b/ExtList.html
@@ -11,7 +11,7 @@
         text-decoration: underline;
       }
       body{
-        background-color: red;
+        background-color: black;
       }
     </style>
   </head>
