--- a/ExtList.html
+++ b/ExtList.html
@@ -102,7 +102,7 @@
             <td><font color="yellow">Joystick</font></td>
             <td>Scratch Team</td>
             <td><i>None</i></td>
-            <td><a href="https://raw.githubusercontent.com/LLK/scratch-extension-docs/master/joystickExtension.js">Source</a<
+            <td><a href="https://raw.githubusercontent.com/LLK/scratch-extension-docs/master/joystickExtension.js">Source</a></td>
             <td><i>None</i></td>
             <td><i>None</i></td>
             <td>Gets Joystick values</td>
@@ -221,6 +221,7 @@
             <td><i>None</i></td>
             <td><a href="https://scratch.mit.edu/discuss/topic/77718/">Source</a></td>
             <td><a href="https://scratch.mit.edu/discuss/topic/77718/">Forum Topic</a></td>
+            <td><i>None</i></td>
             <td>Lots of random stuff</td>
           </tr>
           <tr>
@@ -228,6 +229,7 @@
             <td>Scratch Team</td>
             <td><i>None</i></td>
             <td><a href="https://raw.githubusercontent.com/LLK/scratch-extension-docs/master/weather_extension.js">Source</a></td>
+            <td><i>None</i></td>
             <td><i>None</i></td>
             <td>Weather</td>
           </tr>
