--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <title>Error | Redirecting to correct page...</title>
-    <meta http-equiv="refresh" content="3; url=Website/">
+    <meta http-equiv="refresh" content="3; url=blog/">
   </head>
   <body>
-    <h1>Redirecting you to http://Mrcomputer1.github.io/Website/</h1>
-    Did not redirect in 3 seconds click <a href="http://Mrcomputer1.github.io/Website/">here</a>
+    <h1>Redirecting you to http://Mrcomputer1.github.io/blog/</h1>
+    Did not redirect in 3 seconds click <a href="http://Mrcomputer1.github.io/blog/">here</a>
   </body>
 </html>
