--- a/Extensions.html
+++ b/Extensions.html
@@ -12,8 +12,36 @@
     </style>
   </head>
   <body style="background-color: lightblue; color: white"><center>
-    <h1>Mrcomputer1's Scratch Extensions</h1>
-    Here is a list of extensions:<br>
-    <a class="link" href="Mrcomputer1ScratchExtensions/MinecraftExtension.html">Minecraft Extension - Can check minecraft server status</a><br>
+    <h1>LIST OF MRCOMPUTER1'S EXTENSIONS</h1>
+    <table>
+      <thead>
+        <tr>
+          <td>Title</td>
+          <td>Links</td>
+          <td>Info</td>
+        </tr>
+      </thead>
+      <!---->
+      <tbody>
+        <tr>
+          <td>Minecraft Server Checker Extension</td>
+          <td>
+            <a href="http://Mrcomputer1.github.io/MinecraftServerCheckerExtension/MinecraftExtension.js">ScratchX</a>
+            <br><a href="http://Mrcomputer1.github.io/MinecraftServerCheckerExtension/">Docs</a>
+          </td>
+          <td>Gets minecraft server status</td>
+        </tr>
+        <tr>
+          <td>Printer Extension</td>
+          <td>
+            <a href="http://Mrcomputer1.github.io/PrinterExtension/printerextension.js">ScratchX</a>
+            <br><a href="http://Mrcomputer1.github.io/PrinterExtension/">Docs</a>
+          </td>
+          <td>Allows you to print from ScratchX</td>
+        </tr>
+        <!---->
+      </tbody>
+      <!---->
+    </table>
   </center></body>
 </html>
