--- a/Extensions.html
+++ b/Extensions.html
@@ -2,18 +2,18 @@
   <head>
     <title>Mrcomputer1's Scratch Extensions</title>
     <style>
-      .link{
+      a{
         color: blue;
         text-decoration:none;
       }
-      .link:hover{
+      a:hover{
         text-decoration:underline;
       }
     </style>
   </head>
-  <body style="background-color: lightblue; color: white"><center>
+  <body style="background-color: lightblue; color: black"><center>
     <h1>LIST OF MRCOMPUTER1'S EXTENSIONS</h1>
-    <table>
+    <table border="1">
       <thead>
         <tr>
           <td>Title</td>
