--- a/boredworking.html
+++ b/boredworking.html
@@ -6,8 +6,7 @@
 	</head>
 	<body>
 <header>
-	<a href="https://iliketocode.github.io/bored/index.html" class="headeritem">Bored Activities!</a>
-	<span style="text-align:right"><form action="https://iliketocode.github.io/bored/search.html" method="get" style="text-align:right"><input type="text" name="q" id="queryform"><button type="submit" id="submitform"><span class="fa fa-search"></span></button></form></span>
+	<a href="https://iliketocode.github.io/bored/index.html" class="headeritem">View the Bored Activities Website!</a>
 </header>
 <h1>Bored Activities Forums is Offline!</h1>
 It is being worked on! It should hopefully be back soon!
