--- a/boredworking.html
+++ b/boredworking.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 <header>
-	<a href="https://iliketocode.github.io/bored/index.html" class="headeritem">View the Bored Activities Website!</a>
+	<a href="https://iliketocode.github.io/bored/index.html" target="_parent" class="headeritem">View the Bored Activities Website!</a>
 </header>
 <h1>Bored Activities Forums is Offline!</h1>
 It is being worked on! It should hopefully be back soon!
