--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
   <head>
-    <title>Error | Redirecting to correct page...</title>
-    <meta http-equiv="refresh" content="3; url=blog/">
+    <title>Nothing Here.</title>
   </head>
   <body>
-    <h1>Redirecting you to http://Mrcomputer1.github.io/blog/</h1>
-    Did not redirect in 3 seconds click <a href="http://Mrcomputer1.github.io/blog/">here</a>
+    200 OK
   </body>
 </html>
